[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/corn_plant/CornPlant.gd" type="Script" id=1]
[ext_resource path="res://scenes/corn_plant/assets/mature_plant.png" type="Texture" id=2]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_1.png" type="Texture" id=3]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_2.png" type="Texture" id=4]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_3.png" type="Texture" id=5]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_4.png" type="Texture" id=6]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_5.png" type="Texture" id=7]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_6.png" type="Texture" id=8]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_7.png" type="Texture" id=9]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_8.png" type="Texture" id=10]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_9.png" type="Texture" id=11]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_10.png" type="Texture" id=12]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_11.png" type="Texture" id=13]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_12.png" type="Texture" id=14]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_13.png" type="Texture" id=15]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_14.png" type="Texture" id=16]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_15.png" type="Texture" id=17]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_16.png" type="Texture" id=18]
[ext_resource path="res://scenes/corn_plant/assets/plant_grow_17.png" type="Texture" id=19]
[ext_resource path="res://scenes/corn_plant/assets/water_indicator_on.png" type="Texture" id=20]
[ext_resource path="res://scenes/corn_plant/assets/water_indicator_off.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.7801, 70.3134 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "mature_plant",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "growing_plant",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": false,
"name": "indicator_on",
"speed": 2.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": false,
"name": "indicator_off",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.2388, 56.2887 )

[node name="CornPlant" type="StaticBody2D" groups=[
"corn_plant",
]]
z_index = -10
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSpritePlant" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "growing_plant"

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimatedSpriteIndicator" type="AnimatedSprite" parent="."]
position = Vector2( 0, 85 )
frames = SubResource( 3 )
animation = "indicator_on"

[node name="FarnerDetection" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="FarnerDetection"]
shape = SubResource( 4 )
[connection signal="tree_exited" from="." to="." method="_on_CornPlant_tree_exited"]
[connection signal="frame_changed" from="AnimatedSpritePlant" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
